--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,25 +44,33 @@ body {
 
 @media screen and (min-width: 375px) {
     .logo-image {
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 40px;
     }
 }
 
-*/ .menu {
+@media screen and (min-width: 810px) {
+    .logo-image {
+        width: 55px;
+        height: 55px;
+        margin-left: 40px;
+    }
+}
+
+.menu {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     padding: 10px 20px;
     list-style: none;
+    margin-right: 7px;
 }
 
 ul li {
-    margin: 10px 0;
+    margin: 5px 0;
     font-size: 14px;
     font-weight: 500;
-    color: #c9cebd;
 }
 
 ul li a {
@@ -77,38 +85,12 @@ ul li a:hover {
     cursor: pointer;
 }
 
-.logo-div {
-    font-size: 20px;
-    /*background-color: yellow;*/
-}
+/*media queries for 376px size and bigger*/
 
-.logo-paragraph {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-/*media queries for 375px size and bigger*/
-
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 376px) {
     .menu {
         flex-direction: row;
     }
-
-    ul li {
-        margin: 10px 5px;
-        font-size: 12px;
-    }
-}
-
-@media screen and (min-width: 500px) {
-
-    ul li {
-        margin: 10px 5px;
-        font-size: 14px;
-    }
-}
-
-@media screen and (min-width: 809px) {
 
     ul li {
         margin: 10px 5px;
@@ -116,6 +98,23 @@ ul li a:hover {
     }
 }
 
+@media screen and (min-width: 500px) {
+
+    ul li {
+        margin: 10px 5px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 810px) {
+
+    ul li {
+        margin: 10px 5px;
+        font-size: 18px;
+    }
+}
+
+/*styling for main section of the page*/
 
 main {
     display: grid;
@@ -124,7 +123,7 @@ main {
     row-gap: 1rem;
 }
 
-/*to solve the gap between p2 and footer - caused by the main section*/
+/*styling for landing/title section of the page*/
 .title-section {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
@@ -141,6 +140,7 @@ main {
     padding-top: 60px;
 }
 
+
 @media screen and (max-width: 1023px) {
     .title-section {
         background-attachment: scroll;
@@ -148,55 +148,69 @@ main {
 }
 
 h1 {
-    font-size: 26px;
+    font-size: 30px;
     text-transform: uppercase;
-    color: rgb(90, 112, 76);
+    color: whitesmoke;
     font-family: Urbanist, sans-serif;
     font-weight: 800;
     margin-bottom: 15px;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 24px;
     font-style: italic;
-    color: rgb(3, 38, 64);
+    color: whitesmoke;
     font-family: Urbanist, sans-serif;
     font-weight: 600;
 }
 
 @media screen and (min-width: 810px) {
     h1 {
-        font-size: 32px;
+        font-size: 36px;
     }
 
     h2 {
-        font-size: 28px;
+        font-size: 30px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     h1 {
-        font-size: 38px;
+        font-size: 42px;
     }
 
     h2 {
-        font-size: 23px;
+        font-size: 36px;
     }
 }
 
-.text-explanation {
+/*styling paragraph-sections in the main section*/
 
+.text-explanation {
     grid-column: 1 / 13;
     grid-row: 4 / 6;
     background-color: #B2BCAA;
     border-radius: 10px;
     padding: 10px 15px;
+}
+
+.paragraph-title {
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+p {
+    margin-bottom: 15px;
     text-align: left;
+    letter-spacing: 2px;
+    font-size: 14px;
+    text-indent: 10px;
     line-height: 1.5;
 }
 
+/*styling map section in index.html*/
 .map-section {
-
     grid-column: 1 / 13;
     grid-row: 6 / 9;
     background-color: #C9CEBD;
@@ -226,24 +240,15 @@ button {
     bottom: 22px;
 }
 
-
 button:hover {
     border: 1px solid #64403E;
     background-color: #C9CEBD;
     color: #64403E;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 
-.text-explanation {
-    grid-column: 1 / 13;
-    grid-row: 9 / 12;
-    background-color: #B2BCAA;
-    border-radius: 10px;
-    padding: 10px 15px;
-    text-align: left;
-
-}
+/*styling footer*/
 
 footer {
     grid-column: 1 / 13;
@@ -268,40 +273,19 @@ footer {
     color: #c9cebd;
 }
 
-p {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    text-align: left;
-    letter-spacing: 2px;
-    font-size: 14px;
-    text-indent: 10px;
-}
 
-.paragraph-title {
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
+/*style for the Contribute Page*/
 
-/*style for the Form Page page*/
-
-.form-item-2 {
-    grid-column: 1 / 13;
-    grid-row: 2 / 4;
-}
-
-.contribute-form {
+.form-section-div {
     grid-column: 1 / 13;
     grid-row: 4 / 9;
     position: relative;
-    padding: 25px 20px;
 }
 
-/*check padding in the form section*/
 legend {
     font-size: 48px;
     font-family: Urbanist, sans-serif;
-    margin-left: 10px;
+    margin-left: 30px;
     color: #6C6061;
 }
 
@@ -310,12 +294,12 @@ legend {
     font-size: 18px;
     color: #6C6061;
     font-weight: 600;
-    margin: 8px 0;
+    margin: 10px 0;
 }
 
 input {
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: 2px solid #6C6061;
     border-radius: 3px;
     padding-left: 10px;
@@ -347,28 +331,35 @@ form a {
     text-decoration: none;
 }
 
-/*text decoration above none*/
 .submit-button:hover {
     border: 1px solid #64403E;
     background-color: #C9CEBD;
     color: #64403E;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.5s;
+}
+
+@media screen and (min-width: 450px) {
+    input {
+        width: 80%;
+    }
+
+    textarea {
+        width: 80%;
+    }
 }
 
 
 .form-section-div-absolute {
-    width: 10px;
-    height: 10px;
     position: absolute;
-    top: 140px;
+    top: 1140px;
     right: -1000px;
 }
 
 .form-section-photo {
     width: 300px;
     height: 300px;
-    border-radius: 10px;
+    border-radius: 50%;
     opacity: 0.5;
 }
 
@@ -383,17 +374,13 @@ form a {
     }
 
     .form-section-div-absolute {
-        top: 280px;
-        right: 280px;
+        top: 550px;
+        right: 50px;
     }
 
     .form-section-photo {
-        width: 250px;
-        height: 250px;
-    }
-
-    footer {
-        margin-top: 1rem;
+        width: 270px;
+        height: 270px;
     }
 }
 
@@ -407,8 +394,8 @@ form a {
     }
 
     .form-section-div-absolute {
-        top: 320px;
-        right: 320px;
+        top: 550px;
+        right: 50px;
     }
 
     .form-section-photo {
@@ -419,13 +406,13 @@ form a {
 
 @media screen and (min-width: 1024px) {
     .form-section-div-absolute {
-        top: 470px;
-        right: 400px;
+        top: 520px;
+        right: 80px;
     }
 
     .form-section-photo {
-        width: 350px;
-        height: 350px;
+        width: 380px;
+        height: 380px;
     }
 }
 
@@ -443,6 +430,11 @@ form a {
     background-size: cover;
     border: 3px solid #64403E;
     border-radius: 10px;
+}
+
+
+footer {
+    margin-top: 1rem;
 }
 
 /*remove scrolbar from the picture"/
