--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,10 +117,8 @@ ul li a:hover {
 /*styling for main section of the page*/
 
 main {
-    display: grid;
     grid-column: 1 / 13;
     grid-row: 2 / 12;
-    row-gap: 1rem;
 }
 
 /*styling for landing/title section of the page*/
@@ -187,8 +185,6 @@ h2 {
 /*styling paragraph-sections in the main section*/
 
 .text-explanation {
-    grid-column: 1 / 13;
-    grid-row: 4 / 6;
     background-color: #B2BCAA;
     border-radius: 10px;
     padding: 10px 15px;
@@ -423,129 +419,35 @@ form a {
 
 .contribute-page-photo {
     background-image: url("../images/Hosenbiene-small.webp");
-    height: 500px;
+    height: 400px;
     width: 100%;
-    background-repeat: no-repeat, no-repeat;
-    background-position: center;
-    background-size: cover;
-    border: 3px solid #64403E;
-    border-radius: 10px;
 }
-
-
-footer {
-    margin-top: 1rem;
-}
-
-/*remove scrolbar from the picture"/
-/*.form-image {
-    grid-column: 1 / 13;
-    /*display: flex;
-    align-items: center;
-    justify-content: center;
-
-}*/
-
-/*button {
-  background-color: #4CAF50;  Green 
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-left: 100px;
-}*/
-
-/*styling About Us page
-main {
-    display: grid;
-    grid-template-columns: repeat (12, 1fr);
-    grid-template-rows: repeat (12, 1fr);
-    row-gap: 1rem;
-    column-gap: 1rem;
-}
-
-.about-item-2 {
-    grid-column: 1 / 13;
-    grid-row: 3 / 4;
-    background-color: pink;
-}
-
-.about-item-3 {
-    grid-column: 1 / 13;
-    grid-row: 11 / 13;
-    background-image: url("../images/boden_regenwurm-1024x1024.webp");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-.about-item-4 {
-    grid-column: 1 / 13;
-    grid-row: 8 / 11;
-
-}
-
-.about-item-5 {
-    grid-column: 1 / 13;
-    grid-row: 4 / 8;
-    background-image: url("../images/meeting.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-@media screen and (min-width: 809px) {
-
-    .about-item-2 {
-        grid-column: 1 / 4;
-        grid-row: 3 / 5;
-    }
-
-    .about-item-3 {
-        grid-column: 1 / 3;
-        grid-row: 5 / 13;
-    }
-
-    .about-item-4 {
-        grid-column: 3 / 4;
-        grid-row: 5 / 13;
-    }
-
-    .about-item-5 {
-        grid-column: 4 / 13;
-        grid-row: 3 / 13;
-    }
-
-}*/
 
 /*About-Us_Page*/
-.container {
-    display: grid;
-    row-gap: 10px;
-    column-gap: 10px;
-}
 
 .grid-container--fill {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat (8, 200px);
-    margin-top: 41px;
-    column-gap: 82px;
-    row-gap: 41px;
+    grid-template-rows: repeat(4, 500px);
+    margin-top: 1rem;
+    column-gap: 1rem;
+    row-gap: 1rem;
 }
 
-
-.about-us-photo {
+.about-us-photo,
+.contribute-page-photo {
     border: 3px solid #64403E;
     border-radius: 10px;
     height: 500px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 3px solid #64403E;
+    border-radius: 10px;
 }
+
 
 .about-us-photo-1 {
     background-image: url("../images/sunshine.webp");
@@ -566,16 +468,14 @@ main {
 
 
 .child-div {
-    max-width: 311px;
-    max-height: 500px;
-    min-height: 500px;
+    max-width: 365px;
+    min-height: auto;
 }
 
 .ethical-principles li {
     margin-top: 40px;
     margin-left: 20px;
     list-style: none;
-
 }
 
 .list-logo {
@@ -610,10 +510,9 @@ main {
     text-indent: 0;
 }
 
-@media screen and (min-width: 767px) {
-    .child-div {
-        width: 352px;
-        height: 352px;
+@media screen and (min-width: 845px) {
+    .grid-container--fill {
+        grid-template-rows: repeat(3, 500px);
     }
 
 }
