--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,11 @@ body {
 
 .page-container {
     display: grid;
-    grid-template-columns: repeat (12, 1fr);
-    grid-template-rows: 10% repeat (10, 1rf) 10%;
+    grid-template-columns: repeat(12, 1fr);
+    /*grid-template-rows: 10% repeat(10, 1rf) 10%;
     row-gap: 1rem;
-    column-gap: 1rem;
+    column-gap: 1rem;*/
+    gap: 16px;
     padding: 2rem;
 }
 
@@ -494,6 +495,14 @@ form a {
     background-image: url("../images/pkpicknick_1509431939505186_2074816723440290873_n-1024x1024.webp");
 }
 
+@media screen and (min-width: 700px) {
+    .about-us-photo {
+        height: 584px;
+    }
+
+}
+
+.about-us-photo,
 
 .child-div {
     max-width: 365px;
@@ -548,10 +557,6 @@ form a {
 
 .conntact-list-span {
     font-weight: bold;
-}
-
-#bank-account-details {
-    text-indent: 0;
 }
 
 @media screen and (min-width: 845px) {
