--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,700&display=swap');*/
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -15,14 +12,12 @@ body {
 .page-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    /*grid-template-rows: 10% repeat(10, 1rf) 10%;
-    row-gap: 1rem;
-    column-gap: 1rem;*/
     gap: 16px;
     padding: 2rem;
 }
 
 /*header*/
+
 .header-section {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
@@ -86,7 +81,7 @@ ul li a:hover {
     cursor: pointer;
 }
 
-/*media queries for 376px size and bigger*/
+/*media queries for navbar for 376px size and bigger*/
 
 @media screen and (min-width: 376px) {
     .menu {
@@ -100,7 +95,6 @@ ul li a:hover {
 }
 
 @media screen and (min-width: 500px) {
-
     ul li {
         margin: 10px 5px;
         font-size: 16px;
@@ -108,7 +102,6 @@ ul li a:hover {
 }
 
 @media screen and (min-width: 810px) {
-
     ul li {
         margin: 10px 5px;
         font-size: 18px;
@@ -123,6 +116,7 @@ main {
 }
 
 /*styling for landing/title section of the page*/
+
 .title-section {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
@@ -225,6 +219,7 @@ p {
 }
 
 /*styling map section in index.html*/
+
 .map-section {
     grid-column: 1 / 13;
     grid-row: 6 / 9;
@@ -335,13 +330,13 @@ textarea {
 
 .submit-button {
     display: block;
-    max-width: 250px;
+    max-width: 220px;
     margin: 25px 0;
     background-color: #64403E;
     border: none;
     border-radius: 12px;
     color: #C9CEBD;
-    padding: 5px 22px;
+    padding: 10px 22px;
     text-align: center;
     font-family: Urbanist, sans-serif;
     font-size: 12px;
@@ -371,7 +366,6 @@ form a {
     }
 }
 
-
 .form-section-div-absolute {
     position: absolute;
     top: 1140px;
@@ -388,7 +382,6 @@ form a {
 }
 
 @media screen and (min-width: 700px) {
-
     input {
         width: 50%;
     }
@@ -459,8 +452,9 @@ form a {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-template-rows: repeat(4, 600px);
     margin-top: 1rem;
-    column-gap: 1rem;
-    row-gap: 1rem;
+    /*column-gap: 1rem;
+    row-gap: 1rem;*/
+    gap: 16px;
 }
 
 .about-us-photo,
@@ -471,12 +465,7 @@ form a {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: 3px solid #64403E;
-    border-radius: 10px;
 }
-
 
 .about-us-photo-1 {
     background-image: url("../images/sunshine.webp");
@@ -495,18 +484,25 @@ form a {
     background-image: url("../images/pkpicknick_1509431939505186_2074816723440290873_n-1024x1024.webp");
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 375px) and (min-height: 700px) {
     .about-us-photo {
         height: 584px;
     }
-
 }
 
-.about-us-photo,
+@media screen and (min-width: 1024px) and (min-height: 700px) {
+    .about-us-photo {
+        height: 484px;
+    }
+
+    p {
+        font-size: 14px;
+    }
+}
 
 .child-div {
     max-width: 365px;
-    min-height: auto;
+    /*height: 600px;*/
 }
 
 .ethical-principles li {
@@ -563,5 +559,4 @@ form a {
     .grid-container--fill {
         grid-template-rows: repeat(3, 500px);
     }
-
 }
