--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,9 +362,7 @@ textarea {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 3px;
-    margin: 0;
 }
-
 
 .submit-button:hover {
     border: 1px solid #64403E;
@@ -474,8 +472,6 @@ textarea {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-template-rows: repeat(4, 600px);
     margin-top: 1rem;
-    /*column-gap: 1rem;
-    row-gap: 1rem;*/
     gap: 16px;
 }
 
@@ -506,6 +502,12 @@ textarea {
     background-image: url("../images/pkpicknick_1509431939505186_2074816723440290873_n-1024x1024.webp");
 }
 
+hr {
+    border: 2px dashed #6c6061;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
 /*media queries for smartphone*/
 
 @media screen and (min-width: 375px) and (min-height: 700px) {
@@ -522,7 +524,7 @@ textarea {
     }
 }
 
-/*media queries for smartphone*/
+/*media queries for tablet*/
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
 
@@ -536,6 +538,11 @@ textarea {
 
     .contact-list-div {
         margin-top: 50px;
+    }
+
+    hr {
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
 
@@ -558,7 +565,6 @@ textarea {
 
 .child-div {
     max-width: 365px;
-    /*height: 600px;*/
 }
 
 .ethical-principles-div {
@@ -615,22 +621,9 @@ textarea {
     font-weight: bold;
 }
 
-hr {
-    border: 2px dashed #6c6061;
-    margin-top: 25px;
-    margin-bottom: 25px;
+@media screen and (min-width: 845px) {
+
+    .grid-container--fill {
+        grid-template-rows: repeat(3, 500px);
+    }
 }
-
-@media screen and (min-width: 768px) and (min-height: 1024px) {
-
-    hr {
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
-
-    @media screen and (min-width: 845px) {
-
-        .grid-container--fill {
-            grid-template-rows: repeat(3, 500px);
-        }
-    }
