--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,15 +551,19 @@ hr {
 @media screen and (min-width: 1024px) and (min-height: 700px) {
 
     .about-us-photo {
-        height: 584px;
+        height: 484px;
     }
 
     p {
-        font-size: 17px;
+        font-size: 15px;
     }
 
     .contact-list-span {
         font-size: 20px;
+    }
+
+    .paragraph-title {
+        margin-top: 5px;
     }
 }
 
